@@ -10,6 +10,7 @@ included, please mail to `the Google group
 * Applied Mathematics at the Stellenbosch University: http://dip.sun.ac.za/
 * APSW: http://apsw.googlecode.com/svn/publish/index.html
 * ASE: https://wiki.fysik.dtu.dk/ase/
+* Bazaar: http://doc.bazaar.canonical.com/en/
 * Blender: http://www.blender.org/documentation/250PythonDoc/
 * boostmpi: http://documen.tician.de/boostmpi/
 * Calibre: http://calibre.kovidgoyal.net/user_manual/
