@@ -23,6 +23,7 @@ Contents:
    autosummary
    metadata
    extensions
+   doctest
 
    Python <http://python.org/>
 
